--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,7 +1,7 @@
-FROM python:3.7-alpine
+FROM python:3.9.10-slim
 COPY . /app
 WORKDIR /app
-RUN pip install flask flask_cors
+RUN pip install wheel python-dotenv flask flask_cors
 ENTRYPOINT ["python"]
 EXPOSE 5000
 CMD ["app.py"]
